[gd_scene load_steps=14 format=3 uid="uid://d3c8kb7hgfn3"]

[ext_resource type="Texture2D" uid="uid://8w5audgghig6" path="res://Assets/arts/Board.png" id="1_c4xge"]
[ext_resource type="Texture2D" uid="uid://cvwnb38cdup8d" path="res://Assets/arts/Player.png" id="2_8cprp"]
[ext_resource type="Script" path="res://Scenes/main.gd" id="2_grp6l"]
[ext_resource type="Script" path="res://Scenes/Player.gd" id="3_ndehp"]
[ext_resource type="Texture2D" uid="uid://djc6ymmyw5xjr" path="res://Assets/arts/Computer.png" id="3_vqug5"]
[ext_resource type="Texture2D" uid="uid://8k6n4lhm86go" path="res://Assets/arts/Ball.png" id="4_umd0d"]
[ext_resource type="Script" path="res://Scenes/CPU.gd" id="5_kqes5"]
[ext_resource type="FontFile" uid="uid://bn063j7jdx1va" path="res://Assets/fonts/Teko-Regular.ttf" id="5_urmte"]
[ext_resource type="Script" path="res://Scenes/Ball.gd" id="6_jski8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v6yhv"]
size = Vector2(16.7083, 89.7381)

[sub_resource type="CircleShape2D" id="CircleShape2D_gljj1"]
radius = 9.05822

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bfolp"]
size = Vector2(802, 44.869)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ccuiw"]
size = Vector2(44.5556, 454.299)

[node name="Main" type="Sprite2D"]
scale = Vector2(1.43641, 1.42637)
texture = ExtResource("1_c4xge")
centered = false
script = ExtResource("2_grp6l")

[node name="Player" type="StaticBody2D" parent="."]
collision_layer = 3
script = ExtResource("3_ndehp")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
position = Vector2(50, 224.763)
rotation = 3.14159
scale = Vector2(1, 0.753947)
texture = ExtResource("2_8cprp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(50.125, 224.345)
shape = SubResource("RectangleShape2D_v6yhv")

[node name="CPU" type="CharacterBody2D" parent="."]
position = Vector2(750, 210)
script = ExtResource("5_kqes5")

[node name="Sprite2D" type="Sprite2D" parent="CPU"]
position = Vector2(-1.29064e-06, 14.7632)
rotation = 3.14159
scale = Vector2(1, 0.753946)
texture = ExtResource("3_vqug5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CPU"]
position = Vector2(0, 14.3452)
shape = SubResource("RectangleShape2D_v6yhv")

[node name="Ball" type="CharacterBody2D" parent="."]
script = ExtResource("6_jski8")

[node name="Sprite2D" type="Sprite2D" parent="Ball"]
position = Vector2(401, 209.622)
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_umd0d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
position = Vector2(401, 209.622)
shape = SubResource("CircleShape2D_gljj1")

[node name="Borders" type="StaticBody2D" parent="."]

[node name="Top" type="CollisionShape2D" parent="Borders"]
position = Vector2(401, -22.4345)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_bfolp")

[node name="Bottom" type="CollisionShape2D" parent="Borders"]
position = Vector2(401, 476.733)
shape = SubResource("RectangleShape2D_bfolp")

[node name="ScoreLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreLeft"]
position = Vector2(-22.2778, 227.15)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_ccuiw")

[node name="ScoreRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreRight"]
position = Vector2(824.278, 227.149)
shape = SubResource("RectangleShape2D_ccuiw")

[node name="Hud" type="CanvasLayer" parent="."]

[node name="PlayerScore" type="Label" parent="Hud"]
offset_left = 456.0
offset_right = 512.0
offset_bottom = 93.0
theme_override_fonts/font = ExtResource("5_urmte")
theme_override_font_sizes/font_size = 80
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CPUScore" type="Label" parent="Hud"]
offset_left = 648.0
offset_right = 704.0
offset_bottom = 115.0
theme_override_fonts/font = ExtResource("5_urmte")
theme_override_font_sizes/font_size = 80
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BallTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="ScoreLeft" to="." method="_on_score_left_body_entered"]
[connection signal="body_entered" from="ScoreRight" to="." method="_on_score_right_body_entered"]
[connection signal="timeout" from="BallTimer" to="Ball" method="_on_ball_timer_timeout"]
